app/secure-web-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: threatguard-app-service
  namespace: threatguard
  labels:
    app.kubernetes.io/name: cloudnative-threatguard
    app.kubernetes.io/component: protected-workload
spec:
  type: ClusterIP
  selector:
    app: threatguard-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: http-alt
      port: 8080
      targetPort: 8080
      protocol: TCP
